[gd_scene load_steps=29 format=2]

[ext_resource path="res://scripts/misc/TutorialLevel.gd" type="Script" id=1]
[ext_resource path="res://scenes/menus/DebugMenu.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/UI/textbox.png" type="Texture" id=3]
[ext_resource path="res://scenes/enemies/logic/EnemySkillGlobalCD.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/menus/EleganceMeterUI.tscn" type="PackedScene" id=5]
[ext_resource path="res://assets/fonts/Born2bSportyV2.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://scenes/menus/HealthPotUI.tscn" type="PackedScene" id=7]
[ext_resource path="res://scenes/menus/GameOver.tscn" type="PackedScene" id=8]
[ext_resource path="res://scenes/status_effects/DamageBonusBuff.tscn" type="PackedScene" id=9]
[ext_resource path="res://themes/Blur.tres" type="Material" id=10]
[ext_resource path="res://scenes/menus/HeartUI.tscn" type="PackedScene" id=11]
[ext_resource path="res://assets/UI/button_pressed.png" type="Texture" id=12]
[ext_resource path="res://tilesets/Default.tres" type="TileSet" id=13]
[ext_resource path="res://scenes/menus/SceneTransition.tscn" type="PackedScene" id=14]
[ext_resource path="res://assets/UI/button.png" type="Texture" id=15]
[ext_resource path="res://scenes/menus/PauseUI.tscn" type="PackedScene" id=16]
[ext_resource path="res://scenes/menus/InventoryUI.tscn" type="PackedScene" id=17]
[ext_resource path="res://scenes/misc/Light.tscn" type="PackedScene" id=20]
[ext_resource path="res://scenes/menus/FPSCounter.tscn" type="PackedScene" id=21]
[ext_resource path="res://scenes/menus/ManaUI.tscn" type="PackedScene" id=23]
[ext_resource path="res://scenes/menus/SkillsUI.tscn" type="PackedScene" id=24]
[ext_resource path="res://assets/terrain/background_dungeons.png" type="Texture" id=26]
[ext_resource path="res://scenes/Player.tscn" type="PackedScene" id=29]
[ext_resource path="res://tilesets/one_way_tilesets.tres" type="TileSet" id=30]
[ext_resource path="res://scenes/menus/OpalsUI.tscn" type="PackedScene" id=31]

[sub_resource type="DynamicFont" id=1]
size = 48
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=3]
size = 48
font_data = ExtResource( 6 )

[node name="TutorialLevel" type="Node2D"]
script = ExtResource( 1 )

[node name="HeartUI" parent="." instance=ExtResource( 11 )]

[node name="HealthPotUI" parent="." instance=ExtResource( 7 )]

[node name="ManaUI" parent="." instance=ExtResource( 23 )]

[node name="OpalsUI" parent="." instance=ExtResource( 31 )]

[node name="InventoryUI" parent="." instance=ExtResource( 17 )]

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="Background1" type="ParallaxLayer" parent="ParallaxBackground"]
z_as_relative = false
motion_mirroring = Vector2( 1920, 0 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/Background1"]
visible = false
position = Vector2( 0, -320 )
scale = Vector2( 20, 20 )
texture = ExtResource( 26 )
centered = false
__meta__ = {
"_editor_description_": ""
}

[node name="SkillsUI" parent="." instance=ExtResource( 24 )]

[node name="GameOverUI" parent="." instance=ExtResource( 8 )]

[node name="SceneTransition" parent="." instance=ExtResource( 14 )]

[node name="DebugMenu" parent="." instance=ExtResource( 2 )]

[node name="FPSCounter" parent="." instance=ExtResource( 21 )]

[node name="EleganceMeterUI" parent="." instance=ExtResource( 5 )]

[node name="TutorialUI" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="TutorialUI"]
pause_mode = 2
visible = false
anchor_left = 0.492
anchor_top = 0.503
anchor_right = 0.492
anchor_bottom = 0.503
margin_left = -531.36
margin_top = -362.16
margin_right = -491.36
margin_bottom = -322.16

[node name="Blur" type="ColorRect" parent="TutorialUI/Control"]
material = ExtResource( 10 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -2491.0
margin_top = -823.0
margin_right = 3620.0
margin_bottom = 1460.0
color = Color( 1, 1, 1, 0 )

[node name="NinePatchRect" type="NinePatchRect" parent="TutorialUI/Control"]
anchor_left = 13.284
anchor_top = 9.599
anchor_right = 13.284
anchor_bottom = 9.675
margin_left = -397.36
margin_top = -220.96
margin_right = 394.64
margin_bottom = 214.0
texture = ExtResource( 3 )
patch_margin_left = 64
patch_margin_top = 64
patch_margin_right = 64
patch_margin_bottom = 64

[node name="TutorialLabel" type="RichTextLabel" parent="TutorialUI/Control"]
anchor_left = -26.325
anchor_top = 10.225
anchor_right = -26.325
anchor_bottom = 10.225
margin_left = 1201.0
margin_top = -208.0
margin_right = 1968.0
margin_bottom = 10.0
custom_fonts/mono_font = SubResource( 1 )
custom_fonts/normal_font = SubResource( 1 )
bbcode_enabled = true
bbcode_text = "[center]Hold [color=#ffd703]W[/color] and [color=#ffd703]D[/color] to move left and right.
[color=#ffd703]ENTER[/color] to attack enemies at melee range."
text = "Hold W and D to move left and right.
ENTER to attack enemies at melee range."
scroll_active = false

[node name="PressToSkipLabel" type="RichTextLabel" parent="TutorialUI/Control"]
anchor_left = -26.457
anchor_top = 9.102
anchor_right = -26.457
anchor_bottom = 9.102
margin_left = -331.262
margin_top = -51.08
margin_right = 332.738
margin_bottom = -2.08002
custom_fonts/mono_font = SubResource( 2 )
custom_fonts/normal_font = SubResource( 1 )
bbcode_enabled = true
bbcode_text = "[center]TAP [color=#ffd703]CTRL [/color]TO SKIP[/center]"
text = "TAP CTRL TO SKIP"
scroll_active = false

[node name="NextButton" type="TextureButton" parent="TutorialUI/Control"]
anchor_left = 13.292
anchor_top = 11.772
anchor_right = 13.292
anchor_bottom = 11.772
margin_left = -73.6801
margin_top = 30.12
margin_right = -57.6801
margin_bottom = 38.12
rect_scale = Vector2( 9, 9 )
texture_normal = ExtResource( 15 )
texture_pressed = ExtResource( 12 )

[node name="Label" type="Label" parent="TutorialUI/Control"]
anchor_left = 13.292
anchor_top = 11.882
anchor_right = 13.292
anchor_bottom = 11.882
margin_left = -61.9861
margin_top = 38.1095
margin_right = 58.0139
margin_bottom = 86.1095
custom_fonts/font = SubResource( 3 )
text = "Next"
align = 1

[node name="MiniTutorialUI" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="MiniTutorialUI"]
pause_mode = 2
visible = false
anchor_left = 0.492
anchor_top = 0.503
anchor_right = 0.492
anchor_bottom = 0.503
margin_left = -531.36
margin_top = -362.16
margin_right = -491.36
margin_bottom = -322.16

[node name="NinePatchRect" type="NinePatchRect" parent="MiniTutorialUI/Control"]
anchor_left = 13.284
anchor_top = 9.599
anchor_right = 13.284
anchor_bottom = 9.675
margin_left = -301.36
margin_top = 168.04
margin_right = 268.64
margin_bottom = 254.0
texture = ExtResource( 3 )
patch_margin_left = 64
patch_margin_top = 64
patch_margin_right = 64

[node name="TutorialLabel" type="RichTextLabel" parent="MiniTutorialUI/Control"]
anchor_left = -26.325
anchor_top = 10.225
anchor_right = -26.325
anchor_bottom = 10.225
margin_left = 1303.0
margin_top = 164.0
margin_right = 1841.0
margin_bottom = 259.0
custom_fonts/mono_font = SubResource( 1 )
custom_fonts/normal_font = SubResource( 1 )
bbcode_enabled = true
bbcode_text = "[center]Defeat the enemy to proceed."
text = "Defeat the enemy to proceed."
scroll_active = false

[node name="TileMap (Back)" type="TileMap" parent="."]
tile_set = ExtResource( 30 )
cell_size = Vector2( 96, 96 )
format = 1
tile_data = PoolIntArray( -196628, 0, 0, -196627, 0, 0, -196626, 0, 0, -196625, 0, 0, -196624, 0, 0, -196623, 0, 0, -196622, 0, 0, -196621, 0, 0, -196620, 0, 0, -196619, 0, 0, -196618, 0, 0, -196617, 0, 0, -196616, 0, 0, -196615, 0, 0, -196614, 0, 0, -196613, 0, 0, -196612, 0, 0, -196611, 0, 0, -196610, 0, 0, -131092, 0, 0, -131091, 0, 0, -131090, 0, 0, -131089, 0, 0, -131088, 0, 0, -131087, 0, 0, -131086, 0, 0, -131085, 0, 0, -131084, 0, 0, -131083, 0, 0, -131082, 0, 0, -131081, 0, 0, -131080, 0, 0, -131079, 0, 0, -131078, 0, 0, -131077, 0, 0, -131076, 0, 0, -131075, 0, 0, -131074, 0, 0, -65556, 0, 0, -65555, 0, 0, -65554, 0, 0, -65553, 0, 0, -65552, 0, 0, -65551, 0, 0, -65550, 0, 0, -65549, 0, 0, -65548, 0, 0, -65547, 0, 0, -65546, 0, 0, -65545, 0, 0, -65544, 0, 0, -65543, 0, 0, -65542, 0, 0, -65541, 0, 0, -65540, 0, 0, -65539, 0, 0, -65538, 0, 0, -20, 0, 0, -19, 0, 0, -18, 0, 0, -17, 0, 0, -16, 0, 0, -15, 0, 0, -14, 0, 0, -13, 0, 0, -12, 0, 0, -11, 0, 0, -10, 0, 0, -9, 0, 0, -8, 0, 0, -7, 0, 0, -6, 0, 0, -5, 0, 0, -4, 0, 0, -3, 0, 0, -2, 0, 0, 65516, 0, 0, 65517, 0, 0, 65518, 0, 0, 65519, 0, 0, 65520, 0, 0, 65521, 0, 0, 65522, 0, 0, 65523, 0, 0, 65524, 0, 0, 65525, 0, 0, 65526, 0, 0, 65527, 0, 0, 65528, 0, 0, 65529, 0, 0, 65530, 0, 0, 65531, 0, 0, 65532, 0, 0, 65533, 0, 0, 65534, 0, 0, 131052, 0, 0, 131053, 0, 0, 131054, 0, 0, 131055, 0, 0, 131056, 0, 0, 131057, 0, 0, 131058, 0, 0, 131059, 0, 0, 131060, 0, 0, 131061, 0, 0, 131062, 0, 0, 131063, 0, 0, 131064, 0, 0, 131065, 0, 0, 131066, 0, 0, 131067, 0, 0, 131068, 0, 0, 131069, 0, 0, 131070, 0, 0, 196588, 0, 0, 196589, 0, 0, 196590, 0, 0, 196591, 0, 0, 196592, 0, 0, 196593, 0, 0, 196594, 0, 0, 196595, 0, 0, 196596, 0, 0, 196597, 0, 0, 196598, 0, 0, 196599, 0, 0, 196600, 0, 0, 196601, 0, 0, 196602, 0, 0, 196603, 0, 0, 196604, 0, 0, 196605, 0, 0, 196606, 0, 0, 262124, 0, 0, 262125, 0, 0, 262126, 0, 0, 262127, 0, 0, 262128, 0, 0, 262129, 0, 0, 262130, 0, 0, 262131, 0, 0, 262132, 0, 0, 262133, 0, 0, 262134, 0, 0, 262135, 0, 0, 262136, 0, 0, 262137, 0, 0, 262138, 0, 0, 262139, 0, 0, 262140, 0, 0, 262141, 0, 0, 262142, 0, 0, 327660, 0, 0, 327661, 0, 0, 327662, 0, 0, 327663, 0, 0, 327664, 0, 0, 327665, 0, 0, 327666, 0, 0, 327667, 0, 0, 327668, 0, 0, 327669, 0, 0, 327670, 0, 0, 327671, 0, 0, 327672, 0, 0, 327673, 0, 0, 327674, 0, 0, 327675, 0, 0, 327676, 0, 0, 327677, 0, 0, 327678, 0, 0, 393196, 0, 0, 393197, 0, 0, 393198, 0, 0, 393199, 0, 0, 393200, 0, 0, 393201, 0, 0, 393202, 0, 0, 393203, 0, 0, 393204, 0, 0, 393205, 0, 0, 393206, 0, 0, 393207, 0, 0, 393208, 0, 0, 393209, 0, 0, 393210, 0, 0, 393211, 0, 0, 393212, 0, 0, 393213, 0, 0, 393214, 0, 0, 458732, 0, 0, 458733, 0, 0, 458734, 0, 0, 458735, 0, 0, 458736, 0, 0, 458737, 0, 0, 458738, 0, 0, 458739, 0, 0, 458740, 0, 0, 458741, 0, 0, 458742, 0, 0, 458743, 0, 0, 458744, 0, 0, 458745, 0, 0, 458746, 0, 0, 458747, 0, 0, 458748, 0, 0, 458749, 0, 0, 458750, 0, 0, 524268, 4, 0, 524269, 4, 0, 524270, 4, 0, 524271, 4, 0, 524272, 4, 0, 524273, 4, 0, 524274, 4, 0, 524275, 4, 0, 524276, 0, 0, 524277, 0, 0, 524278, 0, 0, 524279, 0, 0, 524280, 0, 0, 524281, 0, 0, 524282, 0, 0, 524283, 0, 0, 524284, 0, 0, 524285, 0, 0, 524286, 0, 0, 589812, 0, 0, 589813, 0, 0, 589814, 0, 0, 589815, 0, 0, 589816, 0, 0, 589817, 0, 0, 589818, 0, 0, 589819, 0, 0, 589820, 0, 0, 589821, 0, 0, 589822, 0, 0, 655348, 0, 0, 655349, 0, 0, 655350, 0, 0, 655351, 0, 0, 655352, 0, 0, 655353, 0, 0, 655354, 0, 0, 655355, 0, 0, 655356, 0, 0, 655357, 0, 0, 655358, 0, 0 )

[node name="TIleMap" type="TileMap" parent="." groups=["Tilemap"]]
tile_set = ExtResource( 13 )
cell_size = Vector2( 96, 96 )
collision_layer = 129
collision_mask = 129
format = 1
tile_data = PoolIntArray( -262170, 6, 0, -262169, 6, 0, -262168, 6, 0, -262167, 6, 0, -262166, 6, 0, -262165, 6, 0, -262164, 6, 0, -262163, 6, 0, -262162, 6, 0, -262161, 6, 0, -262160, 6, 0, -262159, 6, 0, -262158, 6, 0, -262157, 6, 0, -262156, 6, 0, -262155, 6, 0, -262154, 6, 0, -262153, 6, 0, -262152, 6, 0, -262151, 6, 0, -262150, 6, 0, -262149, 6, 0, -262148, 6, 0, -262147, 6, 0, -262146, 6, 0, -262145, 6, 0, -327680, 6, 0, -327679, 6, 0, -327678, 6, 0, -327677, 6, 0, -196634, 6, 0, -196633, 6, 0, -196632, 6, 0, -196631, 6, 0, -196630, 6, 0, -196629, 6, 0, -196626, 12, 0, -196622, 12, 0, -196617, 12, 0, -196613, 12, 0, -196610, 6, 0, -196609, 6, 0, -262144, 6, 0, -262143, 6, 0, -262142, 6, 0, -262141, 6, 0, -131098, 6, 0, -131097, 6, 0, -131096, 6, 0, -131095, 6, 0, -131094, 6, 0, -131093, 6, 0, -131090, 13, 0, -131086, 13, 0, -131081, 13, 0, -131077, 13, 0, -131074, 6, 0, -131073, 6, 0, -196608, 6, 0, -196607, 6, 0, -196606, 6, 0, -196605, 6, 0, -65562, 6, 0, -65561, 6, 0, -65560, 6, 0, -65559, 6, 0, -65558, 6, 0, -65557, 6, 0, -65554, 13, 0, -65550, 13, 0, -65545, 13, 0, -65541, 13, 0, -65538, 6, 0, -65537, 6, 0, -131072, 6, 0, -131071, 6, 0, -131070, 6, 0, -131069, 6, 0, -26, 6, 0, -25, 6, 0, -24, 6, 0, -23, 6, 0, -22, 6, 0, -21, 6, 0, -18, 13, 0, -14, 13, 0, -9, 13, 0, -5, 13, 0, -2, 6, 0, -1, 6, 0, -65536, 6, 0, -65535, 6, 0, -65534, 6, 0, -65533, 6, 0, 65510, 6, 0, 65511, 6, 0, 65512, 6, 0, 65513, 6, 0, 65514, 6, 0, 65515, 6, 0, 65518, 13, 0, 65522, 13, 0, 65527, 13, 0, 65531, 13, 0, 65534, 6, 0, 65535, 6, 0, 0, 6, 0, 1, 6, 0, 2, 6, 0, 3, 6, 0, 131046, 6, 0, 131047, 6, 0, 131048, 6, 0, 131049, 6, 0, 131050, 6, 0, 131051, 6, 0, 131054, 13, 0, 131058, 13, 0, 131063, 13, 0, 131067, 13, 0, 131070, 6, 0, 131071, 6, 0, 65536, 6, 0, 65537, 6, 0, 65538, 6, 0, 65539, 6, 0, 196582, 6, 0, 196583, 6, 0, 196584, 6, 0, 196585, 6, 0, 196586, 6, 0, 196587, 6, 0, 196590, 13, 0, 196594, 13, 0, 196599, 13, 0, 196603, 13, 0, 196606, 6, 0, 196607, 6, 0, 131072, 6, 0, 131073, 6, 0, 131074, 6, 0, 131075, 6, 0, 262118, 6, 0, 262119, 6, 0, 262120, 6, 0, 262121, 6, 0, 262122, 6, 0, 262123, 6, 0, 262126, 13, 0, 262130, 13, 0, 262135, 13, 0, 262139, 13, 0, 262141, 1, 0, 262142, 6, 0, 262143, 6, 0, 196608, 6, 0, 196609, 6, 0, 196610, 6, 0, 196611, 6, 0, 327654, 6, 0, 327655, 6, 0, 327656, 6, 0, 327657, 6, 0, 327658, 6, 0, 327659, 6, 0, 327662, 13, 0, 327666, 13, 0, 327671, 13, 0, 327675, 13, 0, 327678, 6, 0, 327679, 6, 0, 262144, 6, 0, 262145, 6, 0, 262146, 6, 0, 262147, 6, 0, 393190, 6, 0, 393191, 6, 0, 393192, 6, 0, 393193, 6, 0, 393194, 6, 0, 393195, 6, 0, 393198, 13, 0, 393202, 13, 0, 393207, 13, 0, 393211, 13, 0, 393214, 6, 0, 393215, 6, 0, 327680, 6, 0, 327681, 6, 0, 327682, 6, 0, 327683, 6, 0, 458726, 6, 0, 458727, 6, 0, 458728, 6, 0, 458729, 6, 0, 458730, 6, 0, 458731, 6, 0, 458734, 14, 0, 458738, 14, 0, 458743, 14, 0, 458747, 14, 0, 458750, 6, 0, 458751, 6, 0, 393216, 6, 0, 393217, 6, 0, 393218, 6, 0, 393219, 6, 0, 524262, 6, 0, 524263, 6, 0, 524264, 6, 0, 524265, 6, 0, 524266, 6, 0, 524267, 6, 0, 524268, 20, 0, 524269, 19, 0, 524270, 19, 0, 524271, 19, 0, 524272, 20, 0, 524273, 19, 0, 524274, 19, 0, 524275, 19, 0, 524276, 20, 0, 524277, 20, 0, 524278, 19, 0, 524279, 19, 0, 524280, 19, 0, 524281, 20, 0, 524282, 19, 0, 524283, 19, 0, 524284, 19, 0, 524285, 20, 0, 524286, 6, 0, 524287, 6, 0, 458752, 6, 0, 458753, 6, 0, 458754, 6, 0, 458755, 6, 0, 589798, 6, 0, 589799, 6, 0, 589800, 6, 0, 589801, 6, 0, 589802, 6, 0, 589803, 6, 0, 589804, 6, 0, 589805, 6, 0, 589806, 6, 0, 589807, 6, 0, 589808, 6, 0, 589809, 6, 0, 589810, 6, 0, 589811, 6, 0, 589812, 6, 0, 589813, 6, 0, 589814, 6, 0, 589815, 6, 0, 589816, 6, 0, 589817, 6, 0, 589818, 6, 0, 589819, 6, 0, 589820, 6, 0, 589821, 6, 0, 589822, 6, 0, 589823, 6, 0, 524288, 6, 0, 524289, 6, 0, 524290, 6, 0, 524291, 6, 0, 655334, 6, 0, 655335, 6, 0, 655336, 6, 0, 655337, 6, 0, 655338, 6, 0, 655339, 6, 0, 655340, 6, 0, 655341, 6, 0, 655342, 6, 0, 655343, 6, 0, 655344, 6, 0, 655345, 6, 0, 655346, 6, 0, 655347, 6, 0, 655348, 6, 0, 655349, 6, 0, 655350, 6, 0, 655351, 6, 0, 655352, 6, 0, 655353, 6, 0, 655354, 6, 0, 655355, 6, 0, 655356, 6, 0, 655357, 6, 0, 655358, 6, 0, 655359, 6, 0, 589824, 6, 0, 589825, 6, 0, 589826, 6, 0, 589827, 6, 0, 720870, 6, 0, 720871, 6, 0, 720872, 6, 0, 720873, 6, 0, 720874, 6, 0, 720875, 6, 0, 720876, 6, 0, 720877, 6, 0, 720878, 6, 0, 720879, 6, 0, 720880, 6, 0, 720881, 6, 0, 720882, 6, 0, 720883, 6, 0, 720884, 6, 0, 720885, 6, 0, 720886, 6, 0, 720887, 6, 0, 720888, 6, 0, 720889, 6, 0, 720890, 6, 0, 720891, 6, 0, 720892, 6, 0, 720893, 6, 0, 720894, 6, 0, 720895, 6, 0, 655360, 6, 0, 655361, 6, 0, 655362, 6, 0, 655363, 6, 0, 786406, 6, 0, 786407, 6, 0, 786408, 6, 0, 786409, 6, 0, 786410, 6, 0, 786411, 6, 0, 786412, 6, 0, 786413, 6, 0, 786414, 6, 0, 786415, 6, 0, 786416, 6, 0, 786417, 6, 0, 786418, 6, 0, 786419, 6, 0, 786420, 6, 0, 786421, 6, 0, 786422, 6, 0, 786423, 6, 0, 786424, 6, 0, 786425, 6, 0, 786426, 6, 0, 786427, 6, 0, 786428, 6, 0, 786429, 6, 0, 786430, 6, 0, 786431, 6, 0, 720896, 6, 0, 720897, 6, 0, 720898, 6, 0, 720899, 6, 0, 851942, 6, 0, 851943, 6, 0, 851944, 6, 0, 851945, 6, 0, 851946, 6, 0, 851947, 6, 0, 851948, 6, 0, 851949, 6, 0, 851950, 6, 0, 851951, 6, 0, 851952, 6, 0, 851953, 6, 0, 851954, 6, 0, 851955, 6, 0, 851956, 6, 0, 851957, 6, 0, 851958, 6, 0, 851959, 6, 0, 851960, 6, 0, 851961, 6, 0, 851962, 6, 0, 851963, 6, 0, 851964, 6, 0, 851965, 6, 0, 851966, 6, 0, 851967, 6, 0, 786432, 6, 0, 786433, 6, 0, 786434, 6, 0, 786435, 6, 0, 917478, 6, 0, 917479, 6, 0, 917480, 6, 0, 917481, 6, 0, 917482, 6, 0, 917483, 6, 0, 917484, 6, 0, 917485, 6, 0, 917486, 6, 0, 917487, 6, 0, 917488, 6, 0, 917489, 6, 0, 917490, 6, 0, 917491, 6, 0, 917492, 6, 0, 917493, 6, 0, 917494, 6, 0, 917495, 6, 0, 917496, 6, 0, 917497, 6, 0, 917498, 6, 0, 917499, 6, 0, 917500, 6, 0, 917501, 6, 0, 917502, 6, 0, 917503, 6, 0, 851968, 6, 0, 851969, 6, 0, 851970, 6, 0, 851971, 6, 0, 1048605, 5, 0 )
__meta__ = {
"_edit_ik_": true
}

[node name="Player" parent="." instance=ExtResource( 29 )]
position = Vector2( -1295.77, 615.869 )

[node name="Camera2D" type="Camera2D" parent="Player"]
position = Vector2( 9.72693, -62.0423 )
current = true
zoom = Vector2( 1.3, 1.3 )
limit_left = -2000
limit_top = 0
limit_right = 0
limit_bottom = 1500
drag_margin_h_enabled = true
drag_margin_v_enabled = true
editor_draw_limits = true

[node name="Light2D" parent="." instance=ExtResource( 20 )]
visible = false
position = Vector2( 1725.87, 747.09 )
scale = Vector2( 123.492, 44.8937 )
energy = 0.65
mode = 1

[node name="PauseUI" parent="." instance=ExtResource( 16 )]

[node name="EnemySkillGlobalCooldown" parent="." instance=ExtResource( 4 )]

[node name="PlayerSpawnPosition" type="Position2D" parent="."]
position = Vector2( -1293.34, 557 )

[node name="EnemySpawnPosition" type="Position2D" parent="."]
position = Vector2( -815.341, 557 )

[node name="DamageBonusBuff" parent="." instance=ExtResource( 9 )]
position = Vector2( -1430, 615.869 )
amount = 0.5
duration = 15.0
type = "Ice"

[node name="DamageBonusBuff2" parent="." instance=ExtResource( 9 )]
position = Vector2( -1485.44, 615.869 )
amount = 0.5
duration = 15.0
type = "Ice"

[connection signal="pressed" from="TutorialUI/Control/NextButton" to="." method="_on_NextButton_pressed"]
